MW4-63: Save execution request body
